# lol-rag-python

./: .gitignore  AGENTS.md  GEMINI.md  README.md  alias_mapping.json  benchmark_dataset_2000.csv  benchmark_dataset_clean.csv  benchmark_dataset_clean_1.csv  benchmark_dataset_cleann.csv  benchmark_dataset_gemini.csv  benchmark_dataset_small.csv  clean_csv.py  docker-compose.yaml  evaluation_results_final.csv  extract_subset.py  main.ipynb  main.py  pyproject.toml  rag_outputs.jsonl  rag_outputs_1.jsonl  run_evaluation.py  run_generator.py  run_graph_extraction.py  run_rag_inference.py  wal.txt
data/: Aatrox.html  Ahri.html  Akali.html  Akshan.html  Alistar.html  Alune.html  Ambessa.html  Amumu.html  Anivia.html  Annie.html  Aphelios.html  Ashe.html  Ashlesh.html  Atakhan.html  Aurelion Sol.html  Aurora.html  Azir.html  Bard.html  Baron Nashor.html  Bel'Veth.html  Blitzcrank.html  Brand.html  Braum.html  Briar.html  Caitlyn.html  Camille.html  Cassiopeia.html  Cho'Gath.html  Corki.html  Darius.html  Diana.html  Dr. Mundo.html  Draven.html  Ekko.html  Elder Dragon.html  Elise.html  Evelynn.html  Ezreal.html  Fiddlesticks.html  Fiora.html  (+143 more)
processed_data/: Aatrox.json  Ahri.json  Akali.json  Akshan.json  Alistar.json  Alune.json  Ambessa.json  Amumu.json  Anivia.json  Annie.json  Aphelios.json  Ashe.json  Ashlesh.json  Atakhan.json  Aurelion Sol.json  Aurora.json  Azir.json  Bard.json  Baron Nashor.json  Bel'Veth.json  Blitzcrank.json  Brand.json  Braum.json  Briar.json  Caitlyn.json  Camille.json  Cassiopeia.json  Cho'Gath.json  Corki.json  Darius.json  Diana.json  (+151 more)
(+29 files in other folders)
